fixed the overflow issue

--- a/sylesall.css
+++ b/sylesall.css
@@ -3,7 +3,7 @@
 */
 html, body {
 	max-width:100%;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 #cursor {
